Fix build: use new Thread() instead of Thread.ofVirtual()
Thread.ofVirtual() is Java 21+ only. Railway compiles with Java 17
so revert to new Thread(...).start() which works on both versions.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>